promtail-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.22.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: promtail
  name: promtail
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: promtail
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.22.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/loki: "true"
        io.kompose.service: promtail
    spec:
      containers:
        - args:
            - -config.file=/etc/promtail/config.yml
          image: grafana/promtail:1.6.0
          name: promtail
          resources: {}
      restartPolicy: Always
status: {}
